Add 201 status for create
Also add support for custom status codes
