# packages/backend/src/lib/controllers/transformations/createObjectResponse.js
@@ -1,4 +1,9 @@
-module.exports = function createObjectResponse({ data, type, relationships }) {
+module.exports = function createObjectResponse({
+  data,
+  type,
+  relationships,
+  status = 200,
+}) {
   const { id, ...rest } = data
   return {
     data: {
@@ -8,6 +13,11 @@ module.exports = function createObjectResponse({ data, type, relationships }) {
       id: `${id}`,
       relationships: relationships || undefined,
       type,
+    },
+    meta: {
+      internals: {
+        status,
+      },
     },
   }
 }
