# packages/backend/src/services/statusService/resources/index.js
@@ -22,6 +22,9 @@ exports.status = {
                     up: { type: 'boolean' },
                   },
                 },
+                meta: {
+                  type: 'object',
+                },
               },
             },
           },
