# packages/common/dist/openApi.json
@@ -112,7 +112,7 @@
           "description": "successful operation"
         },
         "responses": {
-          "200": {
+          "201": {
             "content": {
               "application/vnd.api+json": {
                 "schema": {
@@ -399,7 +399,7 @@
           "description": "successful operation"
         },
         "responses": {
-          "200": {
+          "201": {
             "content": {
               "application/vnd.api+json": {
                 "schema": {
@@ -627,7 +627,7 @@
           "description": "successful operation"
         },
         "responses": {
-          "200": {
+          "201": {
             "content": {
               "application/vnd.api+json": {
                 "schema": {
@@ -855,7 +855,7 @@
           "description": "successful operation"
         },
         "responses": {
-          "200": {
+          "201": {
             "content": {
               "application/vnd.api+json": {
                 "schema": {
@@ -1083,7 +1083,7 @@
           "description": "successful operation"
         },
         "responses": {
-          "200": {
+          "201": {
             "content": {
               "application/vnd.api+json": {
                 "schema": {
@@ -1311,7 +1311,7 @@
           "description": "successful operation"
         },
         "responses": {
-          "200": {
+          "201": {
             "content": {
               "application/vnd.api+json": {
                 "schema": {
@@ -1595,7 +1595,7 @@
           "description": "successful operation"
         },
         "responses": {
-          "200": {
+          "201": {
             "content": {
               "application/vnd.api+json": {
                 "schema": {
@@ -1996,7 +1996,7 @@
           "description": "successful operation"
         },
         "responses": {
-          "200": {
+          "201": {
             "content": {
               "application/vnd.api+json": {
                 "schema": {
@@ -2475,7 +2475,7 @@
           "description": "successful operation"
         },
         "responses": {
-          "200": {
+          "201": {
             "content": {
               "application/vnd.api+json": {
                 "schema": {
@@ -6970,6 +6970,9 @@
                 "type": "boolean"
               }
             }
+          },
+          "meta": {
+            "type": "object"
           }
         }
       },
